Fix sorting of annotations in reports.